[tool.poetry]
name = "ml-exercise3-adversarial-ml"
version = "0.1.0"
description = ""
authors = ["Terezia Olsiakova <t.olsiakova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
seaborn = "^0.13.1"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
